syntax = "proto3";

package executor;

message Command {
  string binary = 1;
  repeated string parameters = 2;
  bool delete_on_complete = 3;
}

enum CommandStatus {
  UNKNOWN = 0;
  IN_QUEUE = 1;
  IN_PROGRESS = 2;
  COMPLETE = 3;
}


message ExecuteRequest {
  Command command = 1;
  bool ready_for_deletion = 2;
}

message ExecuteResponse {
  int64 time_taken_in_millis = 1;
  string command_output = 2;
  CommandStatus status = 3;
}

service ExecutorService {
  rpc Execute(ExecuteRequest) returns (ExecuteResponse) {};
  rpc QueueExecute(ExecuteRequest) returns (ExecuteResponse) {};
}